--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,14 +62,7 @@
 </div>
 <!-- Footer -->
 
-<footer>
-  <div class="row">
-  <div class="float-left">
-  <img src="../assets/every-little-helps.png" alt=""></div>
 
-    <div class="float-right">Tesco.com 2021 All Rights Reserved</div> 
-  </div>
- </footer>
 
 </section>
 
@@ -79,3 +72,16 @@
 
 
 <router-outlet></router-outlet>
+
+<footer>
+  <div class="row container">
+  <div class="col-xl-6">
+  <img src="../assets/every-little-helps.png" alt="">
+  </div>
+    <div class="col-xl-6">
+      <p class="text-right" >
+      Tesco.com 2021 All Rights Reserved
+    </p>
+  </div> 
+  </div>
+ </footer>
